# minerva

./: .dockerignore  .gitignore  .gitlab-ci.yml  .nvim-dap.lua  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.instance-tester  README.md  cluster.env  dump.sql  dump_v2.sql  dump_v3.sql  renovate.json  schema.yml  sonar-project.properties
api-spec/: api.json  api.yaml  openapi.yaml
container/: 010_initdb-postgis.sh  020_load-minerva-instance.sh  pgdg.list
crates/admin-service/: Cargo.toml  datasource.rs  entityset.rs  entitytype.rs  error.rs  header.rs  kpi.rs  main.rs  serviceerror.rs  trendmaterialization.rs  trendstore.rs  trigger.rs  version.rs
crates/cli/: Cargo.toml  interact.rs  main.rs  pgpass.rs  postgresql.conf
crates/cli/commands/: aggregation.rs  attributestore.rs  baselinedump.rs  common.rs  define.rs  diff.rs  dump.rs  graph.rs  initialize.rs  loaddata.rs  mod.rs  relation.rs  revert.rs  schema.rs  start.rs  trendmaterialization.rs  trendstore.rs  trigger.rs  update.rs  virtualentity.rs
crates/cli/commands/attributestore/: compact.rs  create.rs  list.rs  materialize.rs  materializecurrptr.rs  update.rs
crates/cli/commands/trendmaterialization/: check.rs  create.rs  dump.rs  list.rs  listchunks.rs  mod.rs  populatesourcefingerprint.rs  remove.rs  resetsourcefingerprint.rs  service.rs  update.rs
crates/cli/commands/trendstore/: check.rs  clean.rs  create.rs  delete.rs  deletetimestamp.rs  diff.rs  dump.rs  list.rs  part.rs  partition.rs  renametrend.rs  statistics.rs  update.rs
crates/cli/commands/trigger/: create.rs  createnotifications.rs  delete.rs  disable.rs  dump.rs  enable.rs  list.rs  previewnotifications.rs  rename.rs  update.rs  verify.rs
crates/cli/materialize/: lib.rs  materialize.rs
crates/event-service/: Cargo.toml  main.rs
crates/integration-tests/: Cargo.toml  postgresql.conf
crates/integration-tests/src/: attribute_storage.rs  common.rs  compact_attribute.rs  create_kpi.rs  create_trigger.rs  default_alias.rs  entity.rs  entity_set.rs  event_service.rs  get_entity_types.rs  initialize.rs  lib.rs  load_data.rs  minerva_admin_service.rs  minerva_event_service.rs  service.rs  trend_materialization.rs  trend_statistics.rs  trend_storage.rs  trend_value_information.rs  trigger_trigger.rs
crates/integration-tests/src/load_data/: common_cluster.rs
crates/integration-tests/tests/: compact_attribute.rs  create_kpi.rs  create_trigger.rs  default_alias.rs  entity_set.rs  get_entity_types.rs  initialize.rs  load_data.rs  main.rs  service.rs  trend_materialization.rs  trend_storage.rs  trend_value_information.rs  trigger_trigger.rs
crates/minerva/: Cargo.toml  postgresql.conf
crates/minerva/migrations/: V01__schemas.sql  V10__main.sql  V1__initial.sql  V20__mark_compacted_with_timestamp.sql  V3__fix-view-materialization-cleanup.sql  V40__old_data_stability_delay.sql  V42__define_event_trigger_templates.sql  V43__event_trigger_rights.sql  V43__fix_template_trigger_permissions.sql  V44__define_timestamptz_in_data_type_order.sql  V45__fix_permissions_for_entity_set_related_relation_tables.sql  V46__add_data_column_for_triggers.sql  V46__fix_permissions_for_entity_set_related_relation_tables.sql  V46__make_trend_materialization_fault_tolerant.sql  V47__add_data_column_for_triggers.sql  V48__default_alias.sql  V48__entity_id_bigserial.sql  V49__remove_broken_notification_generation.sql  V50__define_timestamptz_in_data_type_order.sql  V51__add_trend_statistics.sql  V52__define_timestamptz_abbreviated_in_data_type_order.sql  V53__default_alias_correction.sql  V54__add_trend_statistics_trigger.sql  V55__enable_lookback_templates.sql  V55__entity_id_and_alias.sql  V56__restore_timestamp_statistics.sql  V57__trend_deletion_staging.sql  V58__cascade_trigger_table_removals.sql  V59__allow_materialization_description_null.sql  V59__change_ownership.sql  V59__ownership_to_postgres.sql  V60__attribute_id_bigint.sql  V60__change_future_ownership.sql  V60__future_ownership_to_postgresql.sql  V60__repair_missing_default_alias.sql  V61__default_alias_materialization.sql  V61__trigger_tag_fingerprint_extensions.sql  V62__attribute_id_bigint.sql  V62__change_ownership.sql  V63__default_alias_materialization.sql  (+1 more)
crates/minerva/src/: aggregation_generation.rs  attribute_materialization.rs  attribute_storage.rs  attribute_store.rs  audit_log.rs  change.rs  cluster.rs  compact.rs  database.rs  entity.rs  entity_set.rs  entity_type.rs  error.rs  graph.rs  instance.rs  interval.rs  job.rs  lib.rs  loading.rs  meas_value.rs  notification_store.rs  relation.rs  schema.rs  schema.sql  schema_old.sql  trend_materialization.rs  trend_store.rs  trigger.rs  trigger_template.rs  virtual_entity.rs
crates/minerva/src/attribute_store/: compact.rs  materialize.rs  materialize_curr_ptr.rs
crates/minerva/src/changes/: mod.rs  trend_store.rs  trigger.rs
crates/minerva/src/diffs/: columnar.sql  entityset_correction.sql  sql_injection_protection.sql
crates/minerva/src/trend_store/: create.rs  remove.rs
crates/minerva/tests/: attribute_storage.rs  entity.rs
design/: default-alias-column.md  sql_change_logging.md
documentation/: book.toml
documentation/design/: book.toml  notification_triggers.md
documentation/design/src/: SUMMARY.md  ddas.md  default-alias-column.md  entity_sets.md  generic-event-based-updating.md  notification_triggers.md  primary-alias-column.md  sql_change_logging.md  trends-schema.json
documentation/src/: SUMMARY.md  attributes-schema.json  config-schema.json  trends-schema.json  trigger-schema.json
documentation/src/design/: attributes-schema.md  ddas.md  dummy-event-notifications.md  entity_sets.md  generic-event-based-updating.md  multi-stage-relation-materialization.md  notification_export.md  notification_triggers.md  trends-schema.md  trigger-schema.md
documentation/src/guide/: README.md  instances.md
examples/from-vendor-documentation/: config.json  extract-attributes  extract-trends  update-from-vendor-docs
examples/tiny_instance_v1/: config.json
examples/tiny_instance_v2/: config.json
(+40 files in other folders)
