[package]
name = "minerva-service"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "minerva-service"
path = "main.rs"

[dependencies]
actix-web = "4.10.2"
actix-cors = "0.7.1"
utoipa = { version = "5.0", features = ["chrono"] }
lazy_static = "1.4.0"
clap = "4.5.32"
minerva = { path = "../minerva" }
tokio = { version = "1.44.1", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-serde_json-1"] }
rustls = { version = "0.23.25", features = ["ring"] }
rustls-native-certs = "0.8.1"
tokio-postgres-rustls = "0.13"
tokio-stream = "0.1.17"
postgres-types = { version = "0.2.9", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
chrono = { version = "0.4", features = ["serde"] }
humantime = "2.2.0"
humantime-serde = "1.1.1"
serde_json = "1.0"
glob = "0.3.2"
regex = "1.11.1"
term-table = "1.4.0"
dialoguer = "0.11"
async-trait = "0.1.88"
deadpool-postgres = "0.14.1"
utoipa-swagger-ui = { version = "9.0", features = ["actix-web"] }
env_logger = "0.11.7"
derive_more = { version = "2.0.1", features = ["full"] }
log = "0.4.27"

[package.metadata.deb]
section = "admin"
