[package]
name = "minerva-service"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "minerva-service"
path = "main.rs"

[dependencies]
actix-web = "4.13.0"
actix-cors = "0.7.1"
utoipa = { version = "5.4.0", features = ["chrono"] }
lazy_static = "1.5.0"
minerva = { path = "../minerva" }
tokio-postgres = { version = "0.7.17", features = ["with-chrono-0_4", "with-serde_json-1"] }
rustls = { version = "0.23.38", features = ["ring"] }
rustls-native-certs = "0.8.3"
tokio-postgres-rustls = "0.13"
serde = { version = "1.0.228", features = ["derive"] }
chrono = { version = "0.4.44", features = ["serde"] }
humantime-serde = "1.1.1"
serde_json = "1.0.149"
deadpool-postgres = "0.14.1"
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"] }
env_logger = "0.11.10"
derive_more = { version = "2.1.1", features = ["full"] }
log = "0.4.29"

[package.metadata.deb]
section = "admin"
