[package]
name = "minerva-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Minerva command line tools"

[[bin]]
path = "main.rs"
name = "minerva"

[lib]
name = "materialize"
path = "materialize/lib.rs"
test = false
doctest = false

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
clap_complete = "4.6.5"
minerva = { version = "*", path = "../minerva" }
tokio = { version = "1.52.3", features = ["full"] }
tokio-postgres = { version = "0.7.18", features = ["with-chrono-0_4", "with-serde_json-1"] }
rustls = { version = "0.23.40", features = ["ring"] }
rustls-native-certs = "0.8.4"
tokio-postgres-rustls = "0.14.0"
postgres-protocol = "0.6.12"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
chrono = { version = "0.4.45", features = ["serde"] }
humantime = "2.3.0"
humantime-serde = "1.1.1"
serde_json = "1.0.150"
regex = "1.12.4"
dialoguer = "0.12.0"
log = "0.4.32"
env_logger = "0.11.10"
term-table = "1.4.0"
comfy-table = "7.2.2"
testcontainers = { version = "0.27.3" }
thiserror = "2.0.18"
deadpool-postgres = "0.14.1"
tokio-stream = "0.1.18"
futures = "0.3.32"
erased-serde = "0.4.10"
petgraph = "0.8.3"
dotenvy = "0.15.7"

[package.metadata.deb]
section = "admin"
