[package]
name = "minerva-event-service"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "minerva-event-service"
path = "main.rs"

[dependencies]
serde = "1.0.228"
serde_json = "1.0.149"
chrono = "0.4"
humantime-serde = "1.1.1"
utoipa = "5.4.0"
postgres = { version = "0.19.12", features = ["with-serde_json-1"] }
tokio = { version = "1.49.0", features = ["full"] }
tokio-postgres = { version = "0.7.15", features = ["with-chrono-0_4", "with-serde_json-1"] }
rustls = { version = "0.23.36", features = ["ring"] }
tokio-postgres-rustls = "0.13"
rustls-native-certs = "0.8.3"
log = "0.4.29"
env_logger = "0.11.8"
deadpool-postgres = "0.14.1"
derive_more = "2.1.1"
reqwest = { version = "0.12.28", features = ["json", "rustls-tls"], default-features = false }
