[package]
name = "minerva-event-service"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "minerva-event-service"
path = "main.rs"

[dependencies]
serde = "1.0.228"
serde_json = "1.0.149"
chrono = "0.4.44"
humantime-serde = "1.1.1"
tokio = { version = "1.52.1", features = ["full"] }
tokio-postgres = { version = "0.7.17", features = ["with-chrono-0_4", "with-serde_json-1"] }
rustls = { version = "0.23.39", features = ["ring"] }
tokio-postgres-rustls = "0.13"
rustls-native-certs = "0.8.3"
log = "0.4.29"
env_logger = "0.11.10"
deadpool-postgres = "0.14.1"
reqwest = { version = "0.13.3", features = ["json"] }
