[package]
name = "minerva-event-service"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "minerva-event-service"
path = "main.rs"

[dependencies]
serde = "1.0.229"
serde_json = "1.0.151"
chrono = "0.4.45"
humantime-serde = "1.1.1"
tokio = { version = "1.53.1", features = ["full"] }
tokio-postgres = { version = "0.7.18", features = ["with-chrono-0_4", "with-serde_json-1"] }
rustls = { version = "0.23.42", features = ["ring"] }
tokio-postgres-rustls = "0.14.0"
rustls-native-certs = "0.8.4"
log = "0.4.33"
env_logger = "0.11.11"
deadpool-postgres = "0.14.1"
reqwest = { version = "0.13.4", features = ["json"] }
