[package]
name = "integration-tests"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Minerva integration tests"

[dependencies]
minerva = { version = "*", path = "../minerva" }
tokio = { version = "1.47.1", features = ["full"] }
tokio-postgres = { version = "0.7.13", features = ["with-chrono-0_4", "with-serde_json-1"] }
rustls = "0.23.31"
rustls-native-certs = "0.8.1"
tokio-postgres-rustls = "0.13"
postgres-types = { version = "0.2.9", features = ["derive"] }
serde = { version = "1.0.220", features = ["derive"] }
serde_yaml = "0.9.34"
chrono = { version = "0.4", features = ["serde"] }
humantime = "2.2.0"
humantime-serde = "1.1.1"
serde_json = "1.0.143"
glob = "0.3.3"
regex = "1.11.2"
actix-rt = "2.11.0"
actix-web = "4.11.0"
actix-cors = "0.7.1"
bb8 = "0.9"
bb8-postgres = "0.9"
env_logger = "0.11.8"
lazy_static = "1.5.0"
assert_cmd = "2.0.17"
predicates = "3.1.3"
rand = "0.9.2"
tempfile = "3.22.0"
reqwest = { version = "0.12.23", features = ["json"] }
rust_decimal = "1.37.2"
rust_decimal_macros = "1.37.1"
testcontainers = "0.25.0"
url = "2.5.7"
log = "0.4.28"
async-trait = "0.1.89"
toxiproxy_rust = "0.1.6"
thiserror = "2.0.16"
postgres-protocol = "0.6.8"
ctor = "0.5.0"
libtest-mimic = "0.8.1"
futures = "0.3.31"

[[test]]
name = "integration_tests"
path = "tests/main.rs"
harness = false
