[package]
name = "integration-tests"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Minerva integration tests"

[dependencies]
minerva = { version = "*", path = "../minerva" }
tokio = { version = "1.49.0", features = ["full"] }
tokio-postgres = { version = "0.7.16", features = ["with-chrono-0_4", "with-serde_json-1"] }
rustls = "0.23.36"
rustls-native-certs = "0.8.3"
tokio-postgres-rustls = "0.13"
postgres-types = { version = "0.2.12", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
chrono = { version = "0.4", features = ["serde"] }
humantime = "2.3.0"
humantime-serde = "1.1.1"
serde_json = "1.0.149"
glob = "0.3.3"
regex = "1.12.3"
actix-rt = "2.11.0"
actix-web = "4.13.0"
actix-cors = "0.7.1"
bb8 = "0.9.1"
bb8-postgres = "0.9"
env_logger = "0.11.9"
lazy_static = "1.5.0"
assert_cmd = "2.1.2"
predicates = "3.1.4"
rand = "0.9.2"
tempfile = "3.25.0"
reqwest = { version = "0.13.2", features = ["json"] }
rust_decimal = "1.40.0"
rust_decimal_macros = "1.40.0"
testcontainers = "0.25.2"
url = "2.5.8"
log = "0.4.29"
async-trait = "0.1.89"
toxiproxy_rust = "0.1.6"
thiserror = "2.0.18"
postgres-protocol = "0.6.10"
ctor = "0.6.3"
libtest-mimic = "0.8.1"
futures = "0.3.31"

[[test]]
name = "integration_tests"
path = "tests/main.rs"
harness = false
