[package]
name = "integration-tests"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Minerva integration tests"

[dependencies]
minerva = { version = "*", path = "../minerva" }
tokio = { version = "1.52.1", features = ["full"] }
tokio-postgres = { version = "0.7.17", features = ["with-chrono-0_4", "with-serde_json-1"] }
postgres-types = { version = "0.2.13", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
chrono = { version = "0.4.44", features = ["serde"] }
serde_json = "1.0.149"
assert_cmd = "2.2.1"
predicates = "3.1.4"
rand = "0.10.1"
tempfile = "3.27.0"
reqwest = { version = "0.13.2", features = ["json"] }
rust_decimal = "1.41.0"
rust_decimal_macros = "1.40.0"
testcontainers = "0.27.3"
url = "2.5.8"
log = "0.4.29"
async-trait = "0.1.89"
toxiproxy_rust = "0.1.6"
thiserror = "2.0.18"
postgres-protocol = "0.6.11"

[[test]]
name = "integration_tests"
path = "tests/main.rs"
harness = false

[dev-dependencies]
env_logger = "0.11.10"
libtest-mimic = "0.8.2"

[lib]
test = false
doctest = false
