[package]
name = "minerva"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { version = "1.49.0", features = ["full"] }
tokio-postgres = { version = "0.7.16", features = ["with-chrono-0_4", "with-serde_json-1"] }
tokio-postgres-rustls = "0.13"
futures-util = "0.3"
postgres-types = { version = "0.2.11", features = ["derive"] }
postgres-protocol = "0.6.10"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
chrono = { version = "0.4", features = ["serde"] }
humantime = "2.3.0"
humantime-serde = "1.1.1"
serde_json = "1.0.149"
glob = "0.3.3"
regex = "1.12.2"
async-trait = "0.1.89"
csv = "1.4.0"
anyhow = "1.0.100"
bytes = "1.11.0"
rust_decimal = { version = "1.40.0", features = ["db-postgres"] }
rustls = "0.23.36"
rustls-native-certs = "0.8.3"
lazy_static = "1.5.0"
thiserror = "2.0.17"
log = "0.4.29"
url = { version = "2.5.8" }
rand = { version = "0.9.2" }
testcontainers = { version = "0.25.2" }
quick_cache = "0.6.18"
refinery = { version = "0.8.16", features = ["tokio-postgres"] }
bollard = "0.19.1"
bollard-stubs = "=1.48.3-rc.28.0.4"
erased-serde = "0.4.9"
petgraph = "0.8.3"
pg_query = "6.1.1"
comfy-table = "7.2.2"
similar = "2.7.0"
console = "0.16.2"
typetag = "0.2.21"

[dev-dependencies]
env_logger = { version = "=0.11.8" }

