[package]
name = "minerva"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { version = "1.53.1", features = ["full"] }
tokio-postgres = { version = "0.7.18", features = ["with-chrono-0_4", "with-serde_json-1"] }
tokio-postgres-rustls = "0.14.0"
futures-util = "0.3.33"
postgres-types = { version = "0.2.14", features = ["derive"] }
postgres-protocol = "0.6.12"
serde = { version = "1.0.229", features = ["derive"] }
serde_yaml = "0.9.34"
chrono = { version = "0.4.45", features = ["serde"] }
humantime = "2.4.0"
humantime-serde = "1.1.1"
serde_json = "1.0.151"
glob = "0.3.4"
regex = "1.13.1"
async-trait = "0.1.91"
csv = "1.4.0"
bytes = "1.12.1"
rust_decimal = { version = "1.42.1", features = ["db-postgres"] }
rustls = "0.23.42"
rustls-native-certs = "0.8.4"
lazy_static = "1.5.0"
thiserror = "2.0.19"
log = "0.4.33"
url = { version = "2.5.8" }
rand = { version = "0.10.2" }
testcontainers = { version = "0.27.3" }
quick_cache = "0.7.0"
refinery = { version = "0.9.2", features = ["tokio-postgres"] }
bollard = "0.21.0"
erased-serde = "0.4.10"
petgraph = "0.8.3"
pg_query = "6.1.1"
comfy-table = "7.2.2"
similar = "3.1.1"
console = "0.16.4"
typetag = "0.2.23"
postgres_secrets = "1.0.0"

[lib]
doctest = false

